--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mysql2": "^3.2.0",
     "sequelize": "^6.6.2"
   },
