--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.3",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
