--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.3",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
