--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.3",
     "sequelize": "^6.6.2",
-    "uuid": "^9.0.0"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
