--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.3",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2",
     "uuid": "8.3.2"
   },
